samples/_failures_safe/1761147392_ec6852_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f32addee.c: In function ‘main’:
./samples/SAFE/__tmp_f32addee.c:139:5: error: expected declaration or statement at end of input
  139 |     getchar();
      |     ^~~~~~~
